<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Colin Walters.  All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_action_clear"
        android:title="@string/clear"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/action_keywords"
        android:icon="@drawable/ic_action_keywords"
        android:title="@string/keywords"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_templates"
        android:icon="@drawable/ic_action_templates"
        android:title="@string/templates"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/action_select_table_rows"
                android:title="@string/select_table_rows"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_full_select_rows"
                android:title="@string/full_select_rows"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_select_inner_join_rows"
                android:title="@string/select_inner_join_rows"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_show_tables"
                android:title="@string/show_tables"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_create_row"
                android:title="@string/create_row"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_update_rows"
                android:title="@string/update_rows"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_delete_rows"
                android:title="@string/delete_rows"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_searched_case_expression"
                android:title="@string/searched_case_expression"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_simple_case_expression"
                android:title="@string/simple_case_expression"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_subquery_rows"
                android:title="@string/subquery_rows"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_create_table"
                android:title="@string/create_table"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_create_tables"
                android:title="@string/create_tables"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_create_index"
                android:title="@string/create_index"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_index_used"
                android:title="@string/index_used"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_rename_table"
                android:title="@string/rename_table"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_add_column"
                android:title="@string/add_column"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_create_view"
                android:title="@string/create_view"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_attach_detach_database"
                android:title="@string/attach_detach_database"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_transaction"
                android:title="@string/transaction"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_trigger"
                android:title="@string/trigger"
                app:showAsAction="ifRoom">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_custom_insert"
        android:title="@string/custom_insert">
        <menu>
            <item
                android:id="@+id/action_select_custom_insert"
                android:title="@string/select">
            </item>
            <item
                android:id="@+id/action_new_custom_insert"
                android:title="@string/new_string">
            </item>
            <item
                android:id="@+id/action_rename_custom_insert"
                android:title="@string/rename">
            </item>
            <item
                android:id="@+id/action_delete_custom_insert"
                android:title="@string/delete">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_database"
        android:title="@string/database">
        <menu>
            <item
                android:id="@+id/action_select_database"
                android:title="@string/select">
            </item>
            <item
                android:id="@+id/action_new_database"
                android:title="@string/new_string">
            </item>
            <item
                android:id="@+id/action_rename_database"
                android:title="@string/rename">
            </item>
            <item
                android:id="@+id/action_delete_database"
                android:title="@string/delete">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/action_history"
        android:title="@string/history">
        <menu>
        </menu>
    </item>
    <item
        android:id="@+id/action_clear_history"
        android:title="@string/clear_history">
    </item>
    <item
        android:id="@+id/action_help"
        android:title="@string/help">
    </item>
    <item
        android:id="@+id/action_about"
        android:title="@string/about">
    </item>

</menu>